[package]
name = "sn_payment"
version = "0.1.0"
description = "Safe Network DBC payments"
license = "MIT OR BSD-3-Clause"
keywords = [ "Safe", "Network", "SafeNetwork", "DBC" ]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
edition = "2018"

[dependencies]
bincode = "1.3.3"
custom_debug = "~0.5.0"
hex = "0.4.3"
thiserror = "1.0.24"
sn_dbc = { version = "10.0.0", features = ["serdes"] }
tiny-keccak = "2.0.2"

  [dependencies.serde]
  version = "1.0.133"
  features = [ "derive", "rc" ]
